Fix alignment of draft button on photos list.

--- a/app/assets/stylesheets/admin/_draft.scss
+++ b/app/assets/stylesheets/admin/_draft.scss
@@ -8,6 +8,10 @@
 		left: $spacing-2;
 		position: absolute;
 		bottom: $spacing-2;
+
+		@include breakpoint($bp-narrow) {
+			left: $spacing-1 + $spacing-2;
+		}
 	}
 
 	.single-header & {
